--- a/TimeTracking/Views/Employee/TimeSheet.cshtml
+++ b/TimeTracking/Views/Employee/TimeSheet.cshtml
@@ -89,14 +89,14 @@
                     </tr>
                 </tbody>
             </table>
-            <div class=" table-responsive " style="height:310px;overflow-y:scroll">
+            <div class=" table-responsive " style="height:350px;overflow-y:scroll">
                 <table class="table table-bordered" data-bind="visble:items.length>0" style="font-size:12px !important;">
 
                     <thead>
                         <tr>
                             <th>Day</th>
                             <th>Service<br />Code</th>
-                            <th>Plan<br />Section</th>
+                            <th>Plan<br/>Section</th>
                             <th>Time In</th>
                             <th>AM/PM</th>
                             <th>Time Out</th>
@@ -372,9 +372,11 @@
 
                 </div>
             </div>
-            <div id="loading" class="row" align="right" style="margin-right:2px;display:none;">Saving...</div>
+            <div id="loading" class="row" align="right" style="margin-right:2px;display:none;"></div>
 
-            <div id="successdiv" style="display:none" class="alert alert-success">Saved Successfully</div>
+            <div id="successdiv" style="display:none" class="alert alert-success"></div>
+            
+
             <div id="errorDiv" style="display:none" class="alert alert-danger">
             </div>
         </div>
@@ -390,16 +392,19 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div  class="alert alert-success">Saved Successfully</div>
+                <div  class="alert alert-success" id="containerBody"></div>
             </div>
           
         </div>
     </div>
 </div>
 
+
+
 <script type="text/javascript">
     $(document).ready(function () {
         TimeSheet.load();
+
     });
 </script>
 
