--- a/TimeTracking/Views/Shared/_Layout.cshtml
+++ b/TimeTracking/Views/Shared/_Layout.cshtml
@@ -44,31 +44,129 @@
 
 
     </div>
-  
-    <div class="sidebar-toggle" style="width:10%;height:100%">
-            <ul class=" nav-tabs flex-column" style="list-style:none;text-align:right !important;align-items:flex-end !important;padding-top:1px !important">
-                <li class="tabs" id="lihome" style="margin-top:18px !important;float:right !important">
+
+    <div class="nav-side-menu">
+        <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+
+        <div class="menu-list">
+
+            <ul id="menu-content" class="menu-content collapse out">
+                <li class="tabs" id="lihome" >
                     <a href="#">Home</a>
                 </li>
-                <li class="tabs" id="liemp" style="margin-top:3px !important;float:right !important">
+                <li class="tabs" id="liemp" >
                     <a href="@Url.Action("Timesheet", "Employee")">Employee</a>
                 </li>
-                <li class="tabs" id="licontractor" style="margin-top:3px !important;float:right !important">
+                <li class="tabs" id="licontractor" >
                     <a href="#">Contractor</a>
                 </li>
-                <li class="tabs" id="livendor" style="margin-top:3px !important;float:right !important">
+                <li class="tabs" id="livendor" >
                     <a href="#">Vendor</a>
                 </li>
 
-                <li class="tabs" id="lireporting" style="margin-top:3px !important;float:right !important">
+                <li class="tabs" id="lireporting" >
                     <a href="#">Reporting</a>
                 </li>
-                <li class="tabs" id="liadmin" style="margin-top:3px !important;float:right !important">
+                <li class="tabs" id="liadmin" >
                     <a href="@Url.Action("AddUser", "Admin")">Admin</a>
                 </li>
-
             </ul>
+        </div>
     </div>
+
+    @*<div class="nav-side-menu">
+            <div class="brand">Brand Logo</div>
+            <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+
+            <div class="menu-list">
+
+                <ul id="menu-content" class="menu-content collapse out">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-dashboard fa-lg"></i> Dashboard
+                        </a>
+                    </li>
+                    <li data-toggle="collapse" data-target="#products" class="collapsed active">
+                        <a href="#"><i class="fa fa-gift fa-lg"></i> UI Elements <span class="arrow"></span></a>
+                    </li>
+                    <ul class="sub-menu collapse" id="products">
+                        <li class="active"><a href="#">CSS3 Animation</a></li>
+                        <li><a href="#">General</a></li>
+                        <li><a href="#">Buttons</a></li>
+                        <li><a href="#">Tabs & Accordions</a></li>
+                        <li><a href="#">Typography</a></li>
+                        <li><a href="#">FontAwesome</a></li>
+                        <li><a href="#">Slider</a></li>
+                        <li><a href="#">Panels</a></li>
+                        <li><a href="#">Widgets</a></li>
+                        <li><a href="#">Bootstrap Model</a></li>
+                    </ul>
+
+                    <li data-toggle="collapse" data-target="#service" class="collapsed">
+                        <a href="#"><i class="fa fa-globe fa-lg"></i> Services <span class="arrow"></span></a>
+                    </li>
+                    <ul class="sub-menu collapse" id="service">
+                        <li>New Service 1</li>
+                        <li>New Service 2</li>
+                        <li>New Service 3</li>
+                    </ul>
+
+                    <li data-toggle="collapse" data-target="#new" class="collapsed">
+                        <a href="#"><i class="fa fa-car fa-lg"></i> New <span class="arrow"></span></a>
+                    </li>
+                    <ul class="sub-menu collapse" id="new">
+                        <li>New New 1</li>
+                        <li>New New 2</li>
+                        <li>New New 3</li>
+                    </ul>
+
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-user fa-lg"></i> Profile
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-users fa-lg"></i> Users
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>*@
+
+    @*<div class="sidebar-toggle" style="width:15%;height:100%">
+            <div class="container">
+                <button type="button" data-toggle="collapse" data-target=".collapse2">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div style="width:50%;float:right" class="navbar-collapse collapse2">
+                    <ul class=" nav-tabs flex-column" style="list-style:none;text-align:right !important;align-items:flex-end !important;padding-top:1px !important">
+                        <li class="tabs" id="lihome" style="margin-top:18px !important;float:right !important">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="tabs" id="liemp" style="margin-top:3px !important;float:right !important">
+                            <a href="@Url.Action("Timesheet", "Employee")">Employee</a>
+                        </li>
+                        <li class="tabs" id="licontractor" style="margin-top:3px !important;float:right !important">
+                            <a href="#">Contractor</a>
+                        </li>
+                        <li class="tabs" id="livendor" style="margin-top:3px !important;float:right !important">
+                            <a href="#">Vendor</a>
+                        </li>
+
+                        <li class="tabs" id="lireporting" style="margin-top:3px !important;float:right !important">
+                            <a href="#">Reporting</a>
+                        </li>
+                        <li class="tabs" id="liadmin" style="margin-top:3px !important;float:right !important">
+                            <a href="@Url.Action("AddUser", "Admin")">Admin</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>*@
 
 
     <div class="container body-content">
