--- a/TimeTracking/Views/Shared/_Layout.cshtml
+++ b/TimeTracking/Views/Shared/_Layout.cshtml
@@ -46,88 +46,101 @@
     </div>
 
     <div class="nav-side-menu">
-        <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
 
         <div class="menu-list">
 
             <ul id="menu-content" class="menu-content collapse out">
-                <li class="tabs" id="lihome" >
-                    <a href="#">Home</a>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-folder fa-lg" style="color:khaki"></i> Home
+                    </a>
                 </li>
-                <li class="tabs" id="liemp" >
-                    <a href="@Url.Action("Timesheet", "Employee")">Employee</a>
+                <li>
+                    <a href="#"><i class=" fa fa-folder fa-lg"  style="color:khaki"></i> Employee </a>
                 </li>
-                <li class="tabs" id="licontractor" >
-                    <a href="#">Contractor</a>
+                <li>
+                    <a href="#">
+                        <i class=" fa fa-folder fa-lg"  style="color:khaki"></i> Contractor
+                    </a>
                 </li>
-                <li class="tabs" id="livendor" >
-                    <a href="#">Vendor</a>
+                <li>
+                    <a href="#">
+                        <i class=" fa fa-folder fa-lg"  style="color:khaki"></i> Vendor
+                    </a>
                 </li>
-
-                <li class="tabs" id="lireporting" >
-                    <a href="#">Reporting</a>
+                <li>
+                    <a href="#">
+                        <i class=" fa fa-folder fa-lg"  style="color:khaki"></i> Reporting
+                    </a>
                 </li>
-                <li class="tabs" id="liadmin" >
-                    <a href="@Url.Action("AddUser", "Admin")">Admin</a>
+                <li>
+                    <a href="#">
+                        <i class=" fa fa-folder fa-lg"  style="color:khaki"></i> Admin
+                    </a>
                 </li>
             </ul>
         </div>
     </div>
 
     @*<div class="nav-side-menu">
-            <div class="brand">Brand Logo</div>
             <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+
+            <div class="menu-list">
+
+                <ul id="menu-content" class="menu-content collapse out">
+                    <li class="tabs" id="lihome" >
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="tabs" id="liemp" >
+                        <a href="@Url.Action("Timesheet", "Employee")">Employee</a>
+                    </li>
+                    <li class="tabs" id="licontractor" >
+                        <a href="#">Contractor</a>
+                    </li>
+                    <li class="tabs" id="livendor" >
+                        <a href="#">Vendor</a>
+                    </li>
+
+                    <li class="tabs" id="lireporting" >
+                        <a href="#">Reporting</a>
+                    </li>
+                    <li class="tabs" id="liadmin" >
+                        <a href="@Url.Action("AddUser", "Admin")">Admin</a>
+                    </li>
+                </ul>
+            </div>
+        </div>*@
+
+    @*<div class="nav-side-menu">
 
             <div class="menu-list">
 
                 <ul id="menu-content" class="menu-content collapse out">
                     <li>
                         <a href="#">
-                            <i class="fa fa-dashboard fa-lg"></i> Dashboard
+                           Home
                         </a>
                     </li>
-                    <li data-toggle="collapse" data-target="#products" class="collapsed active">
-                        <a href="#"><i class="fa fa-gift fa-lg"></i> UI Elements <span class="arrow"></span></a>
+                    <li data-toggle="collapse" data-target="#empslist" class="collapsed active">
+                        <a href="#">Employee <span class="arrow"></span></a>
                     </li>
-                    <ul class="sub-menu collapse" id="products">
-                        <li class="active"><a href="#">CSS3 Animation</a></li>
-                        <li><a href="#">General</a></li>
-                        <li><a href="#">Buttons</a></li>
-                        <li><a href="#">Tabs & Accordions</a></li>
-                        <li><a href="#">Typography</a></li>
-                        <li><a href="#">FontAwesome</a></li>
-                        <li><a href="#">Slider</a></li>
-                        <li><a href="#">Panels</a></li>
-                        <li><a href="#">Widgets</a></li>
-                        <li><a href="#">Bootstrap Model</a></li>
+                    <ul class="sub-menu collapse" id="empslist" style="padding-top:0px !important;">
+                        <li class="active"><a href="@Url.Action("Timesheet", "Employee")">Time Sheet</a></li>
+                        <li><a href="#">Logs</a></li>
                     </ul>
 
-                    <li data-toggle="collapse" data-target="#service" class="collapsed">
-                        <a href="#"><i class="fa fa-globe fa-lg"></i> Services <span class="arrow"></span></a>
+                    <li >
+                        <a href="#"> Contractor</a>
                     </li>
-                    <ul class="sub-menu collapse" id="service">
-                        <li>New Service 1</li>
-                        <li>New Service 2</li>
-                        <li>New Service 3</li>
-                    </ul>
 
-                    <li data-toggle="collapse" data-target="#new" class="collapsed">
-                        <a href="#"><i class="fa fa-car fa-lg"></i> New <span class="arrow"></span></a>
+                    <li  >
+                        <a href="#">Vendor</a>
                     </li>
-                    <ul class="sub-menu collapse" id="new">
-                        <li>New New 1</li>
-                        <li>New New 2</li>
-                        <li>New New 3</li>
-                    </ul>
+
 
                     <li>
                         <a href="#">
-                            <i class="fa fa-user fa-lg"></i> Profile
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-users fa-lg"></i> Users
+                           Admin
                         </a>
                     </li>
                 </ul>
