--- a/TimeTracking/Views/Employee/TimeSheet.cshtml
+++ b/TimeTracking/Views/Employee/TimeSheet.cshtml
@@ -35,25 +35,24 @@
         }
 </style>
 <div class=" container">
-    <br/>
-    <div class="row" data-bind="visible:HasTime2()!=true" style="margin-bottom:2px">
+    <div class="row" data-bind="visible:HasTime2()!=true" style="margin-bottom:2px;margin-top:2px;">
         <div class="col-sm-12" colspan="8" align="right">
-            <button type="button" data-bind="click:saveDraft,disable:isViewOnly()==true || isSubmitted()==true" class="btn btn-default">
+            <button type="button" data-bind="click:saveDraft,disable:isViewOnly()==true || isSubmitted()==true" class="btn btn-default" style="padding:0px;padding-left:5px;padding-right:5px;">
                 <i class="fa fa-save"></i> <font color="green" data-bind="visible:totalChangesCount()!=0">Save</font> <span data-bind="visible:totalChangesCount()==0">Save</span>   <span class="badge badge-light" style="background-color:red;Color:white;" data-bind="visible:totalChangesCount()!=0,text:totalChangesCount"></span>
             </button>
-            <button type="button" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default">
+            <button type="button" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" style="padding:0px;padding-left:5px;padding-right:5px;">
                 <i class="fa fa-undo"></i> <font color="red" data-bind="visible:canUndo()==true">Undo</font> <span data-bind="visible:canUndo()!=true">Undo</span>
             </button>
             @*<input type="button" value="Save" data-bind="click:saveDraft,disable:isViewOnly()==true" class="btn btn-default" />*@
             @*<input type="button" value="Undo" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" />*@
         </div>
     </div>
-    <div class="row" data-bind="visible:HasTime2()==true"  style="margin-bottom:2px">
+    <div class="row" data-bind="visible:HasTime2()==true"  style="margin-bottom:2px;margin-top:2px;">
         <div class="col-sm-12" colspan="12" align="right">
-            <button type="button" data-bind="click:saveDraft,disable:isViewOnly()==true || isSubmitted()==true" class="btn btn-default">
+            <button type="button" data-bind="click:saveDraft,disable:isViewOnly()==true || isSubmitted()==true" style="padding:0px;padding-left:5px;padding-right:5px;" class="btn btn-default">
                 <i class="fa fa-save"></i> <font color="green" data-bind="visible:totalChangesCount()!=0">Save</font> <span data-bind="visible:totalChangesCount()==0">Save</span>  <span class="badge badge-light" style="background-color:red;Color:white;" data-bind="visible:totalChangesCount()!=0,text:totalChangesCount"></span>
             </button>
-            <button type="button" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default">
+            <button type="button" data-bind="click:undo,disable:canUndo()!=true" class="btn btn-default" style="padding:0px;padding-left:5px;padding-right:5px;">
                 <i class="fa fa-undo"></i> <font color="red" data-bind="visible:canUndo()==true">Undo</font> <span data-bind="visible:canUndo()!=true">Undo</span>
             </button>
             @*<input type="button" value="Save" data-bind="click:saveDraft,disable:isViewOnly()==true" class="btn btn-default" />*@
@@ -61,7 +60,7 @@
         </div>
     </div>
     @*<div class="panel-heading" style="border:1px solid navy !important;"><h4>Employee</h4></div>*@
-    <div class="panel panel-default" style="margin-bottom:10px;">
+    <div class="panel panel-default" style="margin-bottom:2px;">
         <table class="table table-bordered table-responsive">
             @*style="display:none" id="sheet"*@
             <thead>
@@ -89,7 +88,7 @@
             </tbody>
         </table>
     </div>
-    <div class=" panel panel-default " style="height:400px;overflow-y:scroll;margin-bottom:2px; ">
+    <div class=" panel panel-default " style="height:470px;overflow-y:scroll;margin-bottom:2px; ">
         <table class="table table-bordered" data-bind="visble:items.length>0" style="font-size:12px !important">
 
             <thead>
@@ -360,24 +359,24 @@
             </tbody>
         </table>
     </div>
-    <div class="row" data-bind="visible:HasTime2()!=true" style="margin-top:10px;">
+    <div class="row" data-bind="visible:HasTime2()!=true" >
         <div class="col-sm-9">
-            <div id="successdiv"  style="display:none" class="alert alert-success"></div>
+            <div id="successdiv1"  style="display:none" ></div>
         </div>
         <div class="col-sm-3" align="right">
-            <input type="button" value="Submit" data-bind="click:save,disable:isViewOnly()==true || isSubmitted()==true" class="btn btn-default" />
+            <input type="button" value="Submit" data-bind="click:save,disable:isViewOnly()==true || isSubmitted()==true" class="btn btn-default" style="padding:2px;padding-left:5px;padding-right:5px;" />
         </div>
     </div>
-    <div class="row" data-bind="visible:HasTime2()==true"  style="margin-top:10px;">
-        <div class="col-sm-9" align="right">
-            <div id="successdiv" style="display:none" class="alert alert-success"></div>
+    <div class="row" data-bind="visible:HasTime2()==true"  >
+        <div class="col-sm-9">
+            <div id="successdiv2" style="display:none" ></div>
         </div>
         <div class="col-sm-3" align="right">
-            <input type="button" value="Submit" data-bind="click:save,disable:isViewOnly()==true || isSubmitted()==true" class="btn btn-default" />
+            <input type="button" value="Submit" data-bind="click:save,disable:isViewOnly()==true || isSubmitted()==true" class="btn btn-default" style="padding:2px;padding-left:5px;padding-right:5px;" />
 
         </div>
     </div>
-    <div id="loading" class="row" align="right" style="margin-right:2px;display:none;"></div>
+    <div id="loading"  align="right" style="margin-right:2px;display:none;font-size:12px;"></div>
 
 
 
